phase4/manifestsCore_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app
  namespace: my-application-namespace # Ensure this matches the namespace if you use one
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app-container
        image: my-python-app-image:latest # Replace with your actual image
        ports:
        - containerPort: 5000
        env: # Optional environment variables
        - name: ENV_VAR_NAME
          value: "value"
